- New 'largecities' profile using the new setting. It presents very large cities that are relatively rare. It also uses an alternative city style at the borders of the city
- Removed the non functional chisel worldstyle and palettes
- Having a missing asset file is no longer a crashing error but it will put an error in the log and ignore the asset
- Citystyles can now override the building chance

1.18-5.2.5:
- Fixed a problem where spawners might not be correctly set if the Lost City world is exited and loaded again

1.18-5.2.4:
- All mob spawners were spawning pigs. This is fixed now
- The Lost Cities events are back (useful for mods who want to do something special to LC worldgen)
- Cellars at level -1 didn't correctly connect to adjacent corridors in Z direction
- Fixed a problem with heightmaps being stored with bytes. But worldheight no longer fits in a byte. This could cause worldgen issues
- Made borders below buildings and streets only go as deep as needed. This means that you will no longer have ugly borders going down into caves from buildings on top of it
- The test if a chunk is an ocean chunk was totally wrong. This caused some generation to be ugly. Cleaned up biome test code
- Small optimizations
- Added a new 'grass' block to the 'parkblocks' in the city style so that you can use the full palette system for grass in parks
- Added a new 'generalblocks' section to city style so you can specify a few more blocks ('ironbars', 'glowstone', ...)
- New configuration option 'oceanCorrectionBorder' that can be used to change how chunks adjacent to ocean/city chunks will be corrected

1.18-5.2.3:
- It's now possible to use random block palettes for streets too
- Big speed improvement in the Lost City profile selection screen when rendering the world preview
- Saplings in Lost City parks will generate trees again
- 'cityChance' now has double precision which makes it possible to make cities even more rare
- More expansions to the lost city api